antlr-gui/BKITParser.py
# Generated from BKIT.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'printBoolean'", "'readString'", "'printString'", 
                     "'super'", "'preventDefault'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'white'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'.'", "','", "';'", 
                     "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LIT", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "STRINGLIT", "BLOCKCOM", "LINECOM", "WS", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", 
                      "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ID", "PLUS", "MINUS", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "EQ", "NOT_EQ", 
                      "LT", "LT_EQ", "GT", "GT_EQ", "CONCAT", "LB", "RB", 
                      "LP", "RP", "LSB", "RSB", "DOT", "COMMA", "SEMI", 
                      "COLON", "ASSIGN", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_val_decl = 3
    RULE_var_init = 4
    RULE_recursive_decl = 5
    RULE_func_decl = 6
    RULE_list_para = 7
    RULE_para_decl = 8
    RULE_stmt = 9
    RULE_assign_stmt = 10
    RULE_if_stmt = 11
    RULE_for_stmt = 12
    RULE_while_stmt = 13
    RULE_do_while_stmt = 14
    RULE_break_stmt = 15
    RULE_cont_stmt = 16
    RULE_return_stmt = 17
    RULE_call_stmt = 18
    RULE_block_stmt = 19
    RULE_expr = 20
    RULE_expr1 = 21
    RULE_expr2 = 22
    RULE_expr3 = 23
    RULE_expr4 = 24
    RULE_expr5 = 25
    RULE_expr6 = 26
    RULE_expr7 = 27
    RULE_expr8 = 28
    RULE_func_call = 29
    RULE_special_func = 30
    RULE_list_expr = 31
    RULE_array_lit = 32
    RULE_arr_typ_decl = 33
    RULE_return_type = 34
    RULE_var_type = 35
    RULE_elementType = 36
    RULE_listInt = 37
    RULE_listID = 38

    ruleNames =  [ "program", "decls", "decl", "val_decl", "var_init", "recursive_decl", 
                   "func_decl", "list_para", "para_decl", "stmt", "assign_stmt", 
                   "if_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "break_stmt", "cont_stmt", "return_stmt", "call_stmt", 
                   "block_stmt", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "func_call", "special_func", 
                   "list_expr", "array_lit", "arr_typ_decl", "return_type", 
                   "var_type", "elementType", "listInt", "listID" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    LIT=9
    INTLIT=10
    FLOATLIT=11
    BOOLLIT=12
    STRINGLIT=13
    BLOCKCOM=14
    LINECOM=15
    WS=16
    AUTO=17
    BREAK=18
    BOOLEAN=19
    DO=20
    ELSE=21
    FALSE=22
    FLOAT=23
    FOR=24
    FUNCTION=25
    IF=26
    INTEGER=27
    RETURN=28
    STRING=29
    TRUE=30
    WHILE=31
    VOID=32
    OUT=33
    CONTINUE=34
    OF=35
    INHERIT=36
    ARRAY=37
    ID=38
    PLUS=39
    MINUS=40
    MUL=41
    DIV=42
    MOD=43
    NOT=44
    AND=45
    OR=46
    EQ=47
    NOT_EQ=48
    LT=49
    LT_EQ=50
    GT=51
    GT_EQ=52
    CONCAT=53
    LB=54
    RB=55
    LP=56
    RP=57
    LSB=58
    RSB=59
    DOT=60
    COMMA=61
    SEMI=62
    COLON=63
    ASSIGN=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(BKITParser.DeclsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.decls()
            self.state = 79
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKITParser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(BKITParser.DeclsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)




    def decls(self):

        localctx = BKITParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.decl()
                self.state = 82
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def val_decl(self):
            return self.getTypedRuleContext(BKITParser.Val_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = BKITParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 87
                self.val_decl()
                pass

            elif la_ == 2:
                self.state = 88
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Val_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listID(self):
            return self.getTypedRuleContext(BKITParser.ListIDContext,0)


        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(BKITParser.Var_typeContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def var_init(self):
            return self.getTypedRuleContext(BKITParser.Var_initContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_val_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVal_decl" ):
                listener.enterVal_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVal_decl" ):
                listener.exitVal_decl(self)




    def val_decl(self):

        localctx = BKITParser.Val_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_val_decl)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.listID()
                self.state = 92
                self.match(BKITParser.COLON)
                self.state = 93
                self.var_type()
                self.state = 94
                self.match(BKITParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.var_init()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def recursive_decl(self):
            return self.getTypedRuleContext(BKITParser.Recursive_declContext,0)


        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(BKITParser.Var_typeContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_init" ):
                listener.enterVar_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_init" ):
                listener.exitVar_init(self)




    def var_init(self):

        localctx = BKITParser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(BKITParser.ID)
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.state = 100
                self.match(BKITParser.COMMA)
                self.state = 101
                self.recursive_decl()
                pass
            elif token in [BKITParser.COLON]:
                self.state = 102
                self.match(BKITParser.COLON)
                self.state = 103
                self.var_type()
                self.state = 104
                self.match(BKITParser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 108
            self.expr()
            self.state = 109
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Recursive_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def recursive_decl(self):
            return self.getTypedRuleContext(BKITParser.Recursive_declContext,0)


        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(BKITParser.Var_typeContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_recursive_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecursive_decl" ):
                listener.enterRecursive_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecursive_decl" ):
                listener.exitRecursive_decl(self)




    def recursive_decl(self):

        localctx = BKITParser.Recursive_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_recursive_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(BKITParser.ID)
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.state = 112
                self.match(BKITParser.COMMA)
                self.state = 113
                self.recursive_decl()
                pass
            elif token in [BKITParser.COLON]:
                self.state = 114
                self.match(BKITParser.COLON)
                self.state = 115
                self.var_type()
                self.state = 116
                self.match(BKITParser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 120
            self.expr()
            self.state = 121
            self.match(BKITParser.COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def return_type(self):
            return self.getTypedRuleContext(BKITParser.Return_typeContext,0)


        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(BKITParser.Block_stmtContext,0)


        def list_para(self):
            return self.getTypedRuleContext(BKITParser.List_paraContext,0)


        def INHERIT(self):
            return self.getToken(BKITParser.INHERIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BKITParser.ID)
            self.state = 124
            self.match(BKITParser.COLON)
            self.state = 125
            self.match(BKITParser.FUNCTION)
            self.state = 126
            self.return_type()
            self.state = 127
            self.match(BKITParser.LB)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.OUT) | (1 << BKITParser.INHERIT) | (1 << BKITParser.ID))) != 0):
                self.state = 128
                self.list_para()


            self.state = 131
            self.match(BKITParser.RB)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.INHERIT:
                self.state = 132
                self.match(BKITParser.INHERIT)
                self.state = 133
                self.match(BKITParser.ID)


            self.state = 136
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_decl(self):
            return self.getTypedRuleContext(BKITParser.Para_declContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def list_para(self):
            return self.getTypedRuleContext(BKITParser.List_paraContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_list_para

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_para" ):
                listener.enterList_para(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_para" ):
                listener.exitList_para(self)




    def list_para(self):

        localctx = BKITParser.List_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_para)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.para_decl()
                self.state = 139
                self.match(BKITParser.COMMA)
                self.state = 140
                self.list_para()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.para_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(BKITParser.Var_typeContext,0)


        def INHERIT(self):
            return self.getToken(BKITParser.INHERIT, 0)

        def OUT(self):
            return self.getToken(BKITParser.OUT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_para_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPara_decl" ):
                listener.enterPara_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPara_decl" ):
                listener.exitPara_decl(self)




    def para_decl(self):

        localctx = BKITParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_para_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.INHERIT:
                self.state = 145
                self.match(BKITParser.INHERIT)


            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.OUT:
                self.state = 148
                self.match(BKITParser.OUT)


            self.state = 151
            self.match(BKITParser.ID)
            self.state = 152
            self.match(BKITParser.COLON)
            self.state = 153
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(BKITParser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKITParser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(BKITParser.Do_while_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(BKITParser.Break_stmtContext,0)


        def cont_stmt(self):
            return self.getTypedRuleContext(BKITParser.Cont_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKITParser.Call_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = BKITParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.for_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 159
                self.do_while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 160
                self.break_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 161
                self.cont_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 162
                self.return_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 163
                self.call_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)




    def assign_stmt(self):

        localctx = BKITParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(BKITParser.ID)
            self.state = 167
            self.match(BKITParser.ASSIGN)
            self.state = 168
            self.expr()
            self.state = 169
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(BKITParser.ELSE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = BKITParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(BKITParser.IF)
            self.state = 172
            self.match(BKITParser.LB)
            self.state = 173
            self.expr()
            self.state = 174
            self.match(BKITParser.RB)
            self.state = 175
            self.stmt()
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 176
                self.match(BKITParser.ELSE)
                self.state = 177
                self.stmt()

